--- a/netflix.Rmd
+++ b/netflix.Rmd
@@ -74,26 +74,30 @@ for(comb_data in 1:4){
     i <- i + 1
   }
 }
+names(df) <- c("User","Score","Date","ID_film")
 ```
 
 
 
 ```{r}
-# nombres_pelis <- read_csv("../data/movie_titles.csv",
-#                           col_names = FALSE,
-#                           col_types = "iic")
-
 nombres_pelis <- read_tsv("../data/movie_titles.csv",
                       locale = readr::locale(encoding = "ISO-8859-1"),
                       col_names=FALSE)
 
-nombres_pelis <- nombres_pelis %>% separate(X1,",",into =c("ID_film","Year","Title"), extra="merge")
+nombres_pelis <- nombres_pelis %>% separate(X1,",",into =c("ID_film","Date","Title"), extra="merge", convert = TRUE)
+
+nombres_pelis$Date <- ifelse(nombres_pelis$Date == "NULL", NA,nombres_pelis$Date)
 
 # FALTA JUNTAR NOMBRES_PELIS Y DF Y DEJAR EL DATAFRAME BONITO
+df_test <- df[10,]
+inner_join(nombres_pelis, df_test)
 
-#write_csv(df, "../data/pelis.csv")
+
+write_csv(df, "../data/pelis.csv")
 
 #rm(list=ls())
+
+inner_join()
 ```
 
 # Análisis exploratorio de los datos
